--- a/Publications.Rmd
+++ b/Publications.Rmd
@@ -9,111 +9,111 @@ description:
 
 ## -2025- ##
 
-Whittaker, F.\*, DeFalco, A.\*, Goldblum, R.S., Curtin, J.J., **Bradford, D.E.** (2025). Alcohol’s effects on 
+Whittaker, F.\*, DeFalco, A.\*, Goldblum, R.S., Curtin, J.J., Bradford, D.E. (2025). Alcohol’s effects on 
 decision making and cognitive processing in a reward uncertainty task. Psychology of Addictive Behaviors.
 *These authors contributed equally
 
 
-Whittaker, F., DeFalco, A., Sanders, S.M., Perkings, E.R., Joyner, K. J., **Bradford, D.E.** (2025). Racial biases 
+Whittaker, F., DeFalco, A., Sanders, S.M., Perkings, E.R., Joyner, K. J., Bradford, D.E. (2025). Racial biases 
 in skin conductance response-based polygraphs and their legal implications. Nature Human Behavior, 9(1). 
 https://doi.org/10.1038/s41562-024-02025-0
 
-Oldham, J.R., DeFalco, A., Willwerth, S., Nagle, S., Whittaker, F., Mannix, R., Meehan, W.P., **Bradford, D.E** (2025). Concussion-related suppression of general startle reactivity in adolescent Athletes. Journal of Head 
+Oldham, J.R., DeFalco, A., Willwerth, S., Nagle, S., Whittaker, F., Mannix, R., Meehan, W.P., Bradford, D.E. (2025). Concussion-related suppression of general startle reactivity in adolescent Athletes. Journal of Head 
 Trauma Rehabilitation, 40(1). https://doi.org/10.1097/HTR.0000000000000979
 
-Kerr, D.C.R., Kasimanickman, M.R., **Bradford, D.E.**, Baie, H., Parks, K.A. (2025). Problematic alcohol 
+Kerr, D.C.R., Kasimanickman, M.R., Bradford, D.E., Baie, H., Parks, K.A. (2025). Problematic alcohol 
 behaviors and sexual assault on college campuses: How are student reports and institution-reported crime data 
 related? Journal of American College Health, 73(5), 2158–2165. https://doi.org/10.1080/07448481.2025.2492170
 
 ## -2024- ##
 
-**Bradford, D.E.**, Dev, A.S., DeFalco, A., Whittaker, F., Timpano, K.R. (2024). Increasing ecological validity in neuropsychopharmacology research on the relationship between alcohol use and uncertain stressors. Neuropsychopharmacology. 49, 353–354. https://doi.org/10.1038/s41386-023-01672-7
+Bradford, D.E., Dev, A.S., DeFalco, A., Whittaker, F., Timpano, K.R. (2024). Increasing ecological validity in neuropsychopharmacology research on the relationship between alcohol use and uncertain stressors. Neuropsychopharmacology. 49, 353–354. https://doi.org/10.1038/s41386-023-01672-7
 
 
-Lewis, M.W., **Bradford, D.E.**, Akman, E., Frederiks, K., Pace-Schott, E.F., Rosso, I.M. (2024). Unconditioned response to a naturally aversive stimulus as a predictor of physiological conditioned fear, self-reported fearful traits, and severity of posttraumatic stress symptoms. Psychophysiology, 61(3). https://onlinelibrary.wiley.com/doi/abs/10.1111/psyp.14473 *These authors contributed equally
+Lewis, M.W., Bradford, D.E., Akman, E., Frederiks, K., Pace-Schott, E.F., Rosso, I.M. (2024). Unconditioned response to a naturally aversive stimulus as a predictor of physiological conditioned fear, self-reported fearful traits, and severity of posttraumatic stress symptoms. Psychophysiology, 61(3). https://onlinelibrary.wiley.com/doi/abs/10.1111/psyp.14473 *These authors contributed equally
 
- Dev, A.S., **Bradford, D.E.**, Timpano, K.R. (2024). Sociability alcohol expectancies shape predictions of drinking behavior and anxiety in a novel affective forecasting task. Substance Use and Misuse, 0(0), 1-12. https://doi.org/10.1080/10826084.2024.2302133
+ Dev, A.S., Bradford, D.E., Timpano, K.R. (2024). Sociability alcohol expectancies shape predictions of drinking behavior and anxiety in a novel affective forecasting task. Substance Use and Misuse, 0(0), 1-12. https://doi.org/10.1080/10826084.2024.2302133
 
 ## -2023- ##
 
-**Bradford, D. E.**, Dev, A. S., DeFalco, A., Whittaker, F., Timpano, K. A. (2023). Increasing ecological validity in neuropsychopharmacology research on the relationship between alcohol use and uncertain stressors. *Neuropsychopharmacology*. 
+Bradford, D.E., Dev, A. S., DeFalco, A., Whittaker, F., Timpano, K. A. (2023). Increasing ecological validity in neuropsychopharmacology research on the relationship between alcohol use and uncertain stressors. *Neuropsychopharmacology*. 
 
-Kim, H.C., Kaplan, C.M., Islam, S., Anderson, A.S., Piper, M.E., **Bradford, D.E.**, Curtin, J.J., DeYoung, K.A., Smith, J.F., Fox, A.S., Shackman, A.J. (2023) Acute nicotine abstinence amplifies subjective withdrawal symptoms and threat-evoked fear and anxiety, but not extended amygdala reactivity. *Plos One*.
+Kim, H.C., Kaplan, C.M., Islam, S., Anderson, A.S., Piper, M.E., Bradford, D.E., Curtin, J.J., DeYoung, K.A., Smith, J.F., Fox, A.S., Shackman, A.J. (2023) Acute nicotine abstinence amplifies subjective withdrawal symptoms and threat-evoked fear and anxiety, but not extended amygdala reactivity. *Plos One*.
 
-Lewis, M.W., **Bradford, D.E.**, Pace-Schott, E.F., Rauch, S.L., Rosso, I.M. (2023) Multiverse Analysis Demonstrates an Impact of Methodology on Results in a Study of Extinction Retention and PTSD. *Psychophysiology*, 00, e14263. 
+Lewis, M.W., Bradford, D.E., Pace-Schott, E.F., Rauch, S.L., Rosso, I.M. (2023) Multiverse Analysis Demonstrates an Impact of Methodology on Results in a Study of Extinction Retention and PTSD. *Psychophysiology*, 00, e14263. 
 
-Morrris J., Abend, R., Zika, O., **Bradford, D.E.**, Mertens, G. (2023) Neural and psychophysiological markers of intolerance of uncertainty. *International Journal of Psychophysiology*, 184, 94-99.
+Morrris J., Abend, R., Zika, O., Bradford, D.E., Mertens, G. (2023) Neural and psychophysiological markers of intolerance of uncertainty. *International Journal of Psychophysiology*, 184, 94-99.
 
 ## -2022- ##
 
-**Bradford, D.E.**, DeFalco, A., Perkins, E.R., Carvajal, I., Kwasa, J., Goodman, F.R., Jackson, F., Richardson, L.N.S., Woodley, N., Neuberger, L., Sandoval, J.A., Huang, H.J., Joyner, K.J. (2022). Whose signals are being amplified? Towards a more equitable clinical psychophysiology. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2022/BradfordD2022.pdf)
+Bradford, D.E., DeFalco, A., Perkins, E.R., Carvajal, I., Kwasa, J., Goodman, F.R., Jackson, F., Richardson, L.N.S., Woodley, N., Neuberger, L., Sandoval, J.A., Huang, H.J., Joyner, K.J. (2022). Whose signals are being amplified? Towards a more equitable clinical psychophysiology. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2022/BradfordD2022.pdf)
 [**OSF**](https://osf.io/hj3mq/#!)
 
 
-Victor, S., Schleider, J., Ammerman, B., **Bradford, D.E.**, Devendorf, A., Gruber, J., Gunaydin, L., Hallion, L., Kaufman, E., Lewis, S., Stage, D L. (2022). Leveraging the Strengths of Psychologists with Lived Experience of Mental Illness. *Perspectives on Psychological Science*. [**PDF**](https://psyarxiv.com/ksnfd/) 
+Victor, S., Schleider, J., Ammerman, B., Bradford, D.E., Devendorf, A., Gruber, J., Gunaydin, L., Hallion, L., Kaufman, E., Lewis, S., Stage, D L. (2022). Leveraging the Strengths of Psychologists with Lived Experience of Mental Illness. *Perspectives on Psychological Science*. [**PDF**](https://psyarxiv.com/ksnfd/) 
 
-**Bradford, D.E.**, Shireman, J.M., Sant'Ana, S.J., Fronk, G.E., Curtin, J.J. (2022). Alcohol's effects during uncertain and uncontrollable stressors in the laboratory. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2021a.pdf) [**OSF**](https://osf.io/2zmxe/)
+Bradford, D.E., Shireman, J.M., Sant'Ana, S.J., Fronk, G.E., Curtin, J.J. (2022). Alcohol's effects during uncertain and uncontrollable stressors in the laboratory. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2021a.pdf) [**OSF**](https://osf.io/2zmxe/)
 
-Goodman, F.R., Brown, B.A., Silva, G.M., **Bradford, D.E.**, Tennen, H.A., Kashdan, T.B. (2022). Motivational underpinnings of alcohol use in people with social anxiety disorder: A daily diary study. *Behavior Therapy*.
+Goodman, F.R., Brown, B.A., Silva, G.M., Bradford, D.E., Tennen, H.A., Kashdan, T.B. (2022). Motivational underpinnings of alcohol use in people with social anxiety disorder: A daily diary study. *Behavior Therapy*.
 
-Morriss, J., **Bradford, D.E.**, Wake, S., Biagi, N.,Tanovic, E., Kaye, J.T., Joormann, D. (2022). Intolerance of uncertainty and physiological responses during instructed threat of shock: multi-lab investigation. *Biological Psychology*, 167.
+Morriss, J., Bradford, D.E., Wake, S., Biagi, N.,Tanovic, E., Kaye, J.T., Joormann, D. (2022). Intolerance of uncertainty and physiological responses during instructed threat of shock: multi-lab investigation. *Biological Psychology*, 167.
 
 
 ## -2021- ##
 
- Pavlov, Y. G., Adamian, N., Appelhoff, S … **Bradford, D.E.** … Mushtaq, F. (2021). #EEGManyLabs: Investigating the Replicability of Influential EEG Experiments. *Cortex*, 144, 213-229. https://doi.org/10.31234/osf.io/528nr
+ Pavlov, Y. G., Adamian, N., Appelhoff, S … Bradford, D.E. … Mushtaq, F. (2021). #EEGManyLabs: Investigating the Replicability of Influential EEG Experiments. *Cortex*, 144, 213-229. https://doi.org/10.31234/osf.io/528nr
 [**PDF**](files/Publications/PavlovY2021.pdf) [**OSF**](https://osf.io/yb3pq/)
 
 
 ## -2020- ##
 
-Rutherford, A.V., Tanovic, E., **Bradford, D.E.**, & Joormann, J. (2020). Psychophysiological correlates of anxious apprehension: Trait worry is associated with startle response to threat. *International Journal of Psychophysiology*, 158, 136-142. doi.org/10.1016/j.ijpsycho.2020.09.020 [**PDF**](files/Publications/Rutherford2020a/RutherfordA_2020a.pdf)
+Rutherford, A.V., Tanovic, E., Bradford, D.E., & Joormann, J. (2020). Psychophysiological correlates of anxious apprehension: Trait worry is associated with startle response to threat. *International Journal of Psychophysiology*, 158, 136-142. doi.org/10.1016/j.ijpsycho.2020.09.020 [**PDF**](files/Publications/Rutherford2020a/RutherfordA_2020a.pdf)
 
 ## -2018- ##
 
-**Bradford, D.E.**, Fronk, G.E., Sant’Ana, S.J., Magruder, K.P., Kaye, J.T., Curtin, J.J. (2018). The need for precise answers for the goals of precision medicine in alcohol dependence to succeed. *Neuropsychopharmacology*, 43, 1799–1800. doi.org/10.1038/s41386-018-0112-y [**PDF**](files/Publications/BradfordD2018/BradfordD2018a.pdf)
+Bradford, D.E., Fronk, G.E., Sant’Ana, S.J., Magruder, K.P., Kaye, J.T., Curtin, J.J. (2018). The need for precise answers for the goals of precision medicine in alcohol dependence to succeed. *Neuropsychopharmacology*, 43, 1799–1800. doi.org/10.1038/s41386-018-0112-y [**PDF**](files/Publications/BradfordD2018/BradfordD2018a.pdf)
 
-Lakens D., Adolfi F.G., Albers C.J. ... **Bradford D.E.** ...Zwaan R.A.(2018). Justify your alpha. *Nature Human Behavior*(2), 168-171. doi:10.1038/s41562-018-0311-x. [**PDF**](files\Publications/LakensD2018a\LakensD2018a.pdf) [**OSF**](https://osf.io/by2kc/)
+Lakens D., Adolfi F.G., Albers C.J. ... Bradford D.E. ...Zwaan R.A.(2018). Justify your alpha. *Nature Human Behavior*(2), 168-171. doi:10.1038/s41562-018-0311-x. [**PDF**](files\Publications/LakensD2018a\LakensD2018a.pdf) [**OSF**](https://osf.io/by2kc/)
 
-Hur, J., Kaplan, C.M., Smith, J.S., **Bradford, D.E.**, Fox, A.S., Curtin, J.J., Shackman, A.J. (2018). Acute alcohol administration dampens threat-related activation in the central extended amygdala. *Scientific Reports*, 8,doi:10.1038/s41598-018-34987-3. [**PDF**](files/Publications/HurJ2018a/HurJ2018a.pdf)
+Hur, J., Kaplan, C.M., Smith, J.S., Bradford, D.E., Fox, A.S., Curtin, J.J., Shackman, A.J. (2018). Acute alcohol administration dampens threat-related activation in the central extended amygdala. *Scientific Reports*, 8,doi:10.1038/s41598-018-34987-3. [**PDF**](files/Publications/HurJ2018a/HurJ2018a.pdf)
 
 ## -2017- ##
 
-**Bradford, D.E.**, Motschman, C.A., Starr, M.J., Curtin, J.J. (2017). Alcohol’s effects on emotionally motivated attention, defensive reactivity, and subjective anxiety during uncertain threat. *Social Cognitive and Affective Neuroscience*, 12(11), 1823–1832. doi:10.1093/scan/nsx095. [**PDF**](files/Publications/BradfordD2017a/BradfordD2017a.pdf) [**OSF**](https://osf.io/5n7hm/)
+Bradford, D.E., Motschman, C.A., Starr, M.J., Curtin, J.J. (2017). Alcohol’s effects on emotionally motivated attention, defensive reactivity, and subjective anxiety during uncertain threat. *Social Cognitive and Affective Neuroscience*, 12(11), 1823–1832. doi:10.1093/scan/nsx095. [**PDF**](files/Publications/BradfordD2017a/BradfordD2017a.pdf) [**OSF**](https://osf.io/5n7hm/)
 
-Moberg, C.A., **Bradford, D.E.**, Kaye, J.T., Curtin, J.J. (2017). Increased startle potentiation to unpredictable stressors in alcohol dependence: Possible stress neuroadaptation in humans. *Journal of Abnormal Psychology*, 126(4), 441-453.doi: 10.1037/abn0000265. [**PDF**](files/Publications/MobergC2017a/MobergC2017a.pdf) [**OSF**](https://osf.io/ykmuh/)
+Moberg, C.A., Bradford, D.E., Kaye, J.T., Curtin, J.J. (2017). Increased startle potentiation to unpredictable stressors in alcohol dependence: Possible stress neuroadaptation in humans. *Journal of Abnormal Psychology*, 126(4), 441-453.doi: 10.1037/abn0000265. [**PDF**](files/Publications/MobergC2017a/MobergC2017a.pdf) [**OSF**](https://osf.io/ykmuh/)
 
-Kaye J.T., **Bradford D.E.**, Magruder K.P., Curtin J.J. (2017). Probing for neuroadaptations to unpredictable stressors in addiction: translational methods and emerging evidence. *Journal of Studies on Alcohol and Drugs*, 78(3).353-371. doi: 10.15288/jsad.2017.78.353. [**PDF**](files/Publications/KayeJ2017a/KayeJ2017a.pdf) [**OSF**](https://osf.io/stxgc/)
+Kaye J.T., Bradford, D.E., Magruder K.P., Curtin J.J. (2017). Probing for neuroadaptations to unpredictable stressors in addiction: translational methods and emerging evidence. *Journal of Studies on Alcohol and Drugs*, 78(3).353-371. doi: 10.15288/jsad.2017.78.353. [**PDF**](files/Publications/KayeJ2017a/KayeJ2017a.pdf) [**OSF**](https://osf.io/stxgc/)
 
 ## -2016- ##
 
-Kaye J.T., **Bradford D.E.**, Curtin J.J.(2016). Psychometric properties of startle and corrugator response in NPU, Affective Picture Viewing, and Resting State Tasks. *Psychophysiology*, 53(8).1241-1255.doi.org/10.1111/psyp.12794. [**PDF**](files/Publications/KayeJ2016a/KayeJ2016a.pdf) [**OSF**](https://osf.io/fdjg9/)
+Kaye J.T., Bradford, D.E., Curtin J.J.(2016). Psychometric properties of startle and corrugator response in NPU, Affective Picture Viewing, and Resting State Tasks. *Psychophysiology*, 53(8).1241-1255.doi.org/10.1111/psyp.12794. [**PDF**](files/Publications/KayeJ2016a/KayeJ2016a.pdf) [**OSF**](https://osf.io/fdjg9/)
 
 ## -2015- ##
 
-**Bradford, D.E.**, Curtin, J.J., Piper, M.E. (2015). Anticipation of smoking sufficiently lowers stress reactivity for nicotine deprived smokers. *Journal of Abnormal Psychology*, 124(1), 128-136. doi:10.1037/abn0000007. [**PDF**](files/Publications/BradfordD2015a/BradfordD2015a.pdf)
+Bradford, D.E., Curtin, J.J., Piper, M.E. (2015). Anticipation of smoking sufficiently lowers stress reactivity for nicotine deprived smokers. *Journal of Abnormal Psychology*, 124(1), 128-136. doi:10.1037/abn0000007. [**PDF**](files/Publications/BradfordD2015a/BradfordD2015a.pdf)
 
-**Bradford, D.E.**, Starr, M.J., Shackman, A.J., Curtin, J. J. (2015). Empirically-based comparisons of the reliability and validity of common quantification approaches for eyeblink startle potentiation in humans. *Psychophysiology*,52(12), 1669-1681. doi: 10.1111/psyp.12545 [**PDF**](files/Publications/BradfordD2015b/BradfordD2015b.pdf) [**OSF**](https://osf.io/5nfvu/)
+Bradford, D.E., Starr, M.J., Shackman, A.J., Curtin, J. J. (2015). Empirically-based comparisons of the reliability and validity of common quantification approaches for eyeblink startle potentiation in humans. *Psychophysiology*,52(12), 1669-1681. doi: 10.1111/psyp.12545 [**PDF**](files/Publications/BradfordD2015b/BradfordD2015b.pdf) [**OSF**](https://osf.io/5nfvu/)
 
-Green, C.S., Eichenbaum, A., Kattner, F., **Bradford, D.E.**,Gentile, D.A., Choo, H., Hsueh, V., Chen, H., Khoo, A. (2015). The role of game genres and the development of internet gaming disorder in school-aged children. *Journal of Addictive Behaviors, Therapy & Rehabilitation* 4(3),doi:10.4172/2324-9005.1000141
+Green, C.S., Eichenbaum, A., Kattner, F., Bradford, D.E.,Gentile, D.A., Choo, H., Hsueh, V., Chen, H., Khoo, A. (2015). The role of game genres and the development of internet gaming disorder in school-aged children. *Journal of Addictive Behaviors, Therapy & Rehabilitation* 4(3),doi:10.4172/2324-9005.1000141
 
-Eichenbaum, A., Kattner, F.,**Bradford, D.E.**, Gentile, D.A., Green, C.S. (2015). Role-playing and real-time strategy games associated with greater probability of internet gaming disorder. *Cyberpsychology, Behavior, and Social Networking* 18(8), 480-485. doi:10.1089/cyber.2015.0092
+Eichenbaum, A., Kattner, F.,Bradford, D.E., Gentile, D.A., Green, C.S. (2015). Role-playing and real-time strategy games associated with greater probability of internet gaming disorder. *Cyberpsychology, Behavior, and Social Networking* 18(8), 480-485. doi:10.1089/cyber.2015.0092
 
 ## -2014- ##
 
-**Bradford, D.E.**, Kaye, J.T., Curtin, J.J. (2014). Not just noise: Individual differences in general startle reactivity predict startle reactivity to uncertain and certain threat. *Psychophysiology*,51(5), 707-411. doi:10.1111/psyp.12193. [**PDF**](files/Publications/BradfordD2014a/BradfordD2014a.pdf)
+Bradford, D.E., Kaye, J.T., Curtin, J.J. (2014). Not just noise: Individual differences in general startle reactivity predict startle reactivity to uncertain and certain threat. *Psychophysiology*,51(5), 707-411. doi:10.1111/psyp.12193. [**PDF**](files/Publications/BradfordD2014a/BradfordD2014a.pdf)
 
-**Bradford, D.E.**, Magruder, K.P., Korhumel, R.A., Curtin, J.J. (2014). Using the threat probability task to assess anxiety and fear to uncertain and certain threat. *Journal of Visualized Experiments*(91). doi:10.3791/51905. [**PDF**](files/Publications/BradfordD2014b/BradfordD2014b.pdf) [**Video**](https://www.jove.com/embed/player?id=51905&access=vqy3aggu&t=1&s=1)
+Bradford, D.E., Magruder, K.P., Korhumel, R.A., Curtin, J.J. (2014). Using the threat probability task to assess anxiety and fear to uncertain and certain threat. *Journal of Visualized Experiments*(91). doi:10.3791/51905. [**PDF**](files/Publications/BradfordD2014b/BradfordD2014b.pdf) [**Video**](https://www.jove.com/embed/player?id=51905&access=vqy3aggu&t=1&s=1)
 
-Lissek, S., **Bradford, D.E.**, Alvarez, R.P., Burton, P., Espensen-Sturges, T., Reynolds,R.C., and Grillon, C. (2014). Neural substrates of classically conditioned fear-generalization in humans: A parametric fMRI study. *Social Cognitive and Affective Neuroscience*, 9(8), 1134-1142. doi:10.1093/scan/nst096. 
+Lissek, S., Bradford, D.E., Alvarez, R.P., Burton, P., Espensen-Sturges, T., Reynolds,R.C., and Grillon, C. (2014). Neural substrates of classically conditioned fear-generalization in humans: A parametric fMRI study. *Social Cognitive and Affective Neuroscience*, 9(8), 1134-1142. doi:10.1093/scan/nst096. 
 
 ## -2013- ##
 
-**Bradford, D.E.**, Shapiro, B.L., Curtin, J.J. (2013). How bad could it be? Alcohol dampens stress responses to threat of uncertain intensity. *Psychological Science*, 24(12), 2541-2549. doi:10.1177/0956797613499923. [**PDF**](files/Publications/BradfordD2013a/BradfordD2013a.pdf)
+Bradford, D.E., Shapiro, B.L., Curtin, J.J. (2013). How bad could it be? Alcohol dampens stress responses to threat of uncertain intensity. *Psychological Science*, 24(12), 2541-2549. doi:10.1177/0956797613499923. [**PDF**](files/Publications/BradfordD2013a/BradfordD2013a.pdf)
 
 ## -2009- ##
 
-Lissek, S., Rabin S., McDowell D., Dvir S., **Bradford, D.E.**, Geraci, M., Pine, S., Grillon, C., (2009). Impaired discriminative fear-conditioning resulting from elevated fear-responding to learned safety cues among individuals with panic disorder. *Behaviour Research and Therapy*, 47(2), 111–118. doi:10.1016/j.brat.2008.10.017 
+Lissek, S., Rabin S., McDowell D., Dvir S., Bradford, D.E., Geraci, M., Pine, S., Grillon, C., (2009). Impaired discriminative fear-conditioning resulting from elevated fear-responding to learned safety cues among individuals with panic disorder. *Behaviour Research and Therapy*, 47(2), 111–118. doi:10.1016/j.brat.2008.10.017 
 
 
 
